# securepipe

./: .gitignore  Cargo.toml  README.md  helpstring.txt
scripts/: benchmark.sh  test.sh
src/: buffer.rs  main.rs  nonce.rs  pipe.rs  pump.rs  rng.rs
src/connection/: config.rs  handshake.rs  mod.rs
src/filter/: compress.rs  crypt.rs  mod.rs
