[package]
name = "securepipe"
description = "A fast and secure means of transferring data between networked machines"
authors = ["Enginecrafter77"]
license = "AGPL-3.0-or-later"
version = "2.0.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
getopts = "0.2.24"
rand = "0.9.2"
dns-lookup = "3.0.1"
x25519-dalek = "2.0.1"
hex = "0.4.3"
log = "0.4.28"
stderrlog = "0.6.0"
